Dropped more irrelevant features

--- a/notebooks/step2_black_box_algorithm.ipynb
+++ b/notebooks/step2_black_box_algorithm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,15 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import os\n",
+    "\n",
+    "os.chdir(\"D:/Algorithmic-Fairness-Interpretability/afi_final_project\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop([\"Default (y)\", \"ID\"], axis=1)\n",
+    "X = df.drop([\"Default (y)\", \"Pred_default (y_hat)\", \"ID\", \"PD\"], axis=1)\n",
     "y = df[\"Default (y)\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +492,7 @@
        "RandomForestClassifier(random_state=42)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,25 +524,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8412\n",
-      "AUC-ROC: 0.8470\n",
+      "Accuracy: 0.8093\n",
+      "AUC-ROC: 0.7568\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      0.94      0.90      1788\n",
-      "           1       0.64      0.44      0.53       441\n",
+      "           0       0.83      0.95      0.89      1788\n",
+      "           1       0.54      0.23      0.32       441\n",
       "\n",
-      "    accuracy                           0.84      2229\n",
-      "   macro avg       0.76      0.69      0.72      2229\n",
-      "weighted avg       0.83      0.84      0.83      2229\n",
+      "    accuracy                           0.81      2229\n",
+      "   macro avg       0.69      0.59      0.61      2229\n",
+      "weighted avg       0.78      0.81      0.78      2229\n",
       "\n"
      ]
     }
@@ -552,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -561,20 +564,18 @@
      "text": [
       "\n",
       "Feature Importances:\n",
-      "                  Feature  Importance\n",
-      "11                    PD    0.287903\n",
-      "6        Monthly payment    0.118718\n",
-      "3         Funding amount    0.116086\n",
-      "2              Car price    0.111301\n",
-      "1                    Age    0.102142\n",
-      "10  Pred_default (y_hat)    0.087377\n",
-      "0             Job tenure    0.078409\n",
-      "5          Loan duration    0.048971\n",
-      "8                Married    0.014989\n",
-      "9              Homeowner    0.014509\n",
-      "12                 Group    0.010151\n",
-      "7           Credit event    0.004941\n",
-      "4           Down payment    0.004503\n"
+      "             Feature  Importance\n",
+      "3    Funding amount    0.197999\n",
+      "6   Monthly payment    0.187286\n",
+      "2         Car price    0.185477\n",
+      "1               Age    0.156386\n",
+      "0        Job tenure    0.113388\n",
+      "5     Loan duration    0.073641\n",
+      "9         Homeowner    0.025741\n",
+      "8           Married    0.020812\n",
+      "10            Group    0.018520\n",
+      "7      Credit event    0.012922\n",
+      "4      Down payment    0.007829\n"
      ]
     }
    ],
@@ -596,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1013,7 @@
        "GradientBoostingClassifier(random_state=42)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,15 +1045,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8475\n",
-      "AUC-ROC: 0.8527\n"
+      "Accuracy: 0.8170\n",
+      "AUC-ROC: 0.7684\n"
      ]
     }
    ],
