Added some comments to compare black-box models

--- a/notebooks/step2_black_box_algorithm.ipynb
+++ b/notebooks/step2_black_box_algorithm.ipynb
@@ -616,6 +616,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Classification Report of the Random Forest indicates that the model misses many true defaults since there is a low recall for defaults (0.20)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -1223,45 +1230,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = best_gb_model.predict(X_test)\n",
-    "y_pred_proba = best_gb_model.predict_proba(X_test)[:, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "roc_auc = roc_auc_score(y_test, y_pred_proba)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.8174\n",
-      "AUC-ROC: 0.7759\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "print(f\"AUC-ROC: {roc_auc:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -1294,7 +1262,7 @@
    ],
    "source": [
     "result_df = X_test.copy()\n",
-    "result_df[\"Predicted_PD\"] = y_pred_proba\n",
+    "result_df[\"Predicted_PD\"] = y_pred_proba_gb\n",
     "result_df[\"True_Label\"] = y_test.values\n",
     "\n",
     "print(result_df.head())\n",
@@ -1306,8 +1274,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next steps:\n",
-    "- Hyperparameter tuning using GridSearchCV to optimize your Random Forest or Gradient Boosting model. - DONE"
+    "1. Accuracy:\n",
+    "- Random Forest: 81.83%\n",
+    "- Gradient Boosting: 81.74%\n",
+    "Both models achieve similar accuracy, but accuracy isn't very meaningful with imbalanced data (many more non-default cases).\n",
+    "\n",
+    "2. AUC-ROC:\n",
+    "- Random Forest: 0.7700\n",
+    "- Gradient Boosting: 0.7759\n",
+    "Both models perform similarly in distinguishing between default and non-default, with Gradient Boosting slightly better.\n"
    ]
   },
   {
