--- a/notebooks/step8_perf_interpretability.ipynb
+++ b/notebooks/step8_perf_interpretability.ipynb
@@ -32,9 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +74,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df.drop([\"Default (y)\", \"Pred_default (y_hat)\", \"ID\", \"PD\", \"Group\"], axis=1)\n",
-    "y = df[\"Default (y)\"]"
+    "y = df[\"Default (y)\"]\n",
+    "y_pred = df[\"Pred_default (y_hat)\"] # should use the predictions from Cata's black-box model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. XPER method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import XPER\n",
+    "\n"
    ]
   }
  ],
