some changes in eda and reduced depth of tree for step 1 as agreed

--- a/notebooks/step1_decision_tree.ipynb
+++ b/notebooks/step1_decision_tree.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "os.chdir('C:/Users/dorab/OneDrive - Ecole Polytechnique/Documents/Data Science for Business HEC x Polytechnique/Year 2/Algorithmic Fairness and Interpretability/final_project/afi_final_project')"
+    "os.chdir('C:/Users/dorab/OneDrive - Ecole Polytechnique/Documents/DSB - HECxX/Year 2/Algorithmic Fairness and Interpretability/afi_final_project')"
    ]
   },
   {
