Small change in documentation of linear regression model

--- a/notebooks/step1_linear_regression.ipynb
+++ b/notebooks/step1_linear_regression.ipynb
@@ -599,7 +599,7 @@
     "- **Credit event**: The most important feature. If the person had past credit events (like defaults or bankruptcies), it strongly increases the likelihood of default.\n",
     "- **Monthly payment**: The second most important feature in predicting default probability. Higher monthly payments likely indicate more financial strain, increasing the risk of default.\n",
     "- **Married and Homeowner**: These characteristics reduce the likelihood of default, potentially because they signify more financial stability.\n",
-    "Job tenure and Age: These features don't seem to have a significant impact on the prediction of default probability in this model, meaning the model doesn't find these factors important in predicting PD.\n",
+    "- **Job tenure and Age**: These features don't seem to have a significant impact on the prediction of default probability in this model, meaning the model doesn't find these factors important in predicting PD.\n",
     "\n",
     "Overall, the plot reveals which features the model considers most relevant in predicting the probability of default (PD). The highest positive bars indicate features that increase the risk of default, while negative bars (such as \"Married\" and \"Homeowner\") show features that decrease the risk."
    ]
