Added explanations to logistic regression model

--- a/notebooks/step1_logistic_regression.ipynb
+++ b/notebooks/step1_logistic_regression.ipynb
@@ -659,6 +659,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ``Credit event`` has the highest positive coefficient, which means that the presence of a credit event is strongly associated with a higher probability of the predicted outcome.\n",
+    "- ``Married`` has a negative coefficient, meaning being married is associated with a lower probability of the predicted outcome.\n",
+    "- Other variables such as ``Monthly payment``, ``Funding amount``, and ``Job tenure`` have smaller coefficients, indicating they have less influence on the outcome."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
