finalised final file

--- a/notebooks/step10_FPDP.ipynb
+++ b/notebooks/step10_FPDP.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8ad580",
+   "id": "803486f8",
    "metadata": {},
    "source": [
     "The goal would be to train the optimal model on the train set, then predict the test set. After prediction, we can perform the FPDP. "
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc474d54",
+   "id": "d619e3e0",
    "metadata": {},
    "source": [
     "We pick up the best model found earlier."
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d708b6e9",
+   "id": "5597ee17",
    "metadata": {},
    "source": [
     "### Fairness Analysis Using Statistical Parity and Chi-Square Test\n",
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ac9d12",
+   "id": "b5761355",
    "metadata": {},
    "source": [
     "### Initialization for Each Feature\n",
@@ -1474,12 +1474,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2090e19",
+   "id": "97280627",
    "metadata": {},
    "source": [
-    "When job tenure is higher than 20 years, the model's predictions show no significant bias between younger and older age groups (p-values > 0.05), indicating fairness. However, when job tenure is below 20 years, the model's predictions are biased (p-values < 0.05), suggesting that age affects the predictions in this range.\n",
+    "####  When job tenure is higher than 20 years, the model's predictions show no significant bias between younger and older age groups (p-values > 0.05), indicating fairness. However, when job tenure is below 20 years, the model's predictions are biased (p-values < 0.05), suggesting that age affects the predictions in this range.\n",
     "\n",
-    "Why the Shift in Fairness Happens:\n",
+    "#### Why the Shift in Fairness Happens:\n",
+    "\n",
     "Longer job tenure likely reflects greater financial stability and better data representation, leading to more consistent predictions across age groups.\n",
     "For shorter job tenure, the model may encounter more variability and bias in the data, resulting in unequal treatment of younger and older individuals.\n",
     "In summary, the model is fairer for individuals with longer job tenure, while it tends to be biased for those with shorter employment history."
@@ -1488,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e096638",
+   "id": "c37416a9",
    "metadata": {},
    "outputs": [],
    "source": []
